--- a/Travelogue.html
+++ b/Travelogue.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="2.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="navbar-item ">
           <a class="nav-link" href="Travelogue.html">Travelogue</a>
@@ -49,30 +49,30 @@
   <!-- Header -->
   <div class="header">
     <h1>Travelogue</h1>
-    <p>Resize the browser window to see the responsive effect.</p>
+    <p></p>
   </div>
 
   <!-- Photo Grid -->
   <div class="row">
     <div class="column">
       <img src="img3.jpg" style="width:100%">
-      <img src="img2.jpeg" style="width:100%">
-      <img src="img1.jpeg" style="width:100%">
+      <img src="img2.jpg" style="width:100%">
+      <img src="img1.jpg" style="width:100%">
       <img src="img3.jpg" style="width:100%">
-      <img src="img2.jpeg" style="width:100%">
+      <img src="img2.jpg" style="width:100%">
 
     </div>
     <div class="column">
       <img src="img3.jpg" style="width:100%">
-      <img src="img2.jpeg" style="width:100%">
-      <img src="img1.jpeg" style="width:100%">
+      <img src="img2.jpg" style="width:100%">
+      <img src="img1.jpg" style="width:100%">
       <img src="img3.jpg" style="width:100%">
 
     </div>
     <div class="column">
       <img src="img3.jpg" style="width:100%">
-      <img src="img2.jpeg" style="width:100%">
-      <img src="img1.jpeg" style="width:100%">
+      <img src="img2.jpg" style="width:100%">
+      <img src="img1.jpg" style="width:100%">
       <img src="img3.jpg" style="width:100%">
 
     </div>
