--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img1.jpeg" alt="Los Angeles" style=" width:100%; height:450px">
+      <img src="img1.jpg" alt="Los Angeles" style=" width:100%; height:450px">
       <div class="carousel-caption">
-    <h3>Los Angeles</h3>
-    <p>We had such a great time in LA!</p>
+    <h3>Kodaikanal</h3>
+    <p>We had such a great time in!</p>
   </div>
     </div>
     <div class="carousel-item">
-      <img src="img2.jpeg" alt="Chicago" style=" width:100%; height:450px">
+      <img src="img2.jpg" alt="Chicago" style=" width:100%; height:450px">
       <div class="carousel-caption">
-    <h3>Los Angeles</h3>
-    <p>We had such a great time in LA!</p>
+    <h3>Kodaikanal</h3>
+    <p>We had such a great time in!</p>
   </div>
     </div>
     <div class="carousel-item">
       <img src="img3.jpg" alt="New York" style=" width:100%; height:450px">
       <div class="carousel-caption">
-    <h3>Los Angeles</h3>
-    <p>We had such a great time in LA!</p>
+    <h3>Kodaikanal</h3>
+    <p>We had such a great time in!</p>
   </div>
     </div>
   </div>
@@ -98,7 +98,7 @@
 
 <!--about-->
 <div class="about">
-  <h1> </t>  About Me</h1>
+  <h3> </t> About Me</h3>
   <p>Lorem ipsum dolor sit amet, dapibus nulla in ut et, mauris volutpat, nunc laboris sed nascetur, netus eu dapibus auctor commodo. Urna non dui et quod voluptatem ac, sit vel, aliquet odio, tellus imperdiet enim condimentum dictumst. Ullamcorper etiam, velit suspendisse vestibulum eu rutrum curabitur. Ad vestibulum, egestas aliquam rutrum rhoncus vestibulum pellentesque. Lorem dis aliquam. Tempus varius, wisi non nulla, pulvinar pede, vel sociis wisi proin sodales, libero eros purus.</p>
   <p>At ac scelerisque scelerisque erat, placerat lacus suscipit in nam sodales quis, nec vitae, donec id orci per, risus nostrud purus pulvinar morbi orci mauris. Eros mi amet eget, sagittis sapien. Massa eget erat eu aliquam dolor, sollicitudin est aliquam accumsan, in wisi quam dui eu aliquam neque, erat leo, vitae turpis ut. In urna eget aenean mollis eget fringilla, sed ullamcorper cras. Arcu ornare class quam ipsum, metus scelerisque lobortis</p>
 </div>
