--- a/Travelogue.html
+++ b/Travelogue.html
@@ -27,12 +27,15 @@
         <li class="navbar-item ">
           <a class="nav-link" href="Travelogue.html">Travelogue</a>
         </li>
+        <li class="navbar-item ">
+          <a class="nav-link" href="myedit.html">My Edits</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
           </a>
           <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="details.html">Contact Details</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Submen wider text</a>
               <ul class="dropdown-menu">
@@ -55,10 +58,10 @@
   <!-- Photo Grid -->
   <div class="row">
     <div class="column">
-      <img src="img3.jpg" style="width:100%">
-      <img src="img2.jpg" style="width:100%">
       <img src="img1.jpg" style="width:100%">
+      <img src="img2.jpg" style="width:100%">
       <img src="img3.jpg" style="width:100%">
+      <img src="img1.jpg" style="width:100%">
       <img src="img2.jpg" style="width:100%">
 
     </div>
@@ -70,27 +73,25 @@
 
     </div>
     <div class="column">
-      <img src="img3.jpg" style="width:100%">
       <img src="img2.jpg" style="width:100%">
       <img src="img1.jpg" style="width:100%">
       <img src="img3.jpg" style="width:100%">
+      <img src="img1.jpg" style="width:100%">
 
     </div>
   </div>
 <div class="tra-about">
-  <h3>About The Travel</h3>
+  <h3><b>About The Travel :</b></h3>
   <p>Lorem ipsum dolor sit amet, dapibus nulla in ut et, mauris volutpat, nunc laboris sed nascetur, netus eu dapibus auctor commodo. Urna non dui et quod voluptatem ac, sit vel, aliquet odio, tellus imperdiet enim condimentum dictumst. Ullamcorper etiam, velit suspendisse vestibulum eu rutrum curabitur. Ad vestibulum, egestas aliquam rutrum rhoncus vestibulum pellentesque. Lorem dis aliquam. Tempus varius, wisi non nulla, pulvinar pede, vel sociis wisi proin sodales, libero eros purus.</p>
   <p>At ac scelerisque scelerisque erat, placerat lacus suscipit in nam sodales quis, nec vitae, donec id orci per, risus nostrud purus pulvinar morbi orci mauris. Eros mi amet eget, sagittis sapien. Massa eget erat eu aliquam dolor, sollicitudin est aliquam accumsan, in wisi quam dui eu aliquam neque, erat leo, vitae turpis ut. In urna eget aenean mollis eget fringilla, sed ullamcorper cras. Arcu ornare class quam ipsum, metus scelerisque lobortis</p>
 </div>
 
 <!--footer-->
-  <div class="footer">
-    <br>
-    <p>Contact :<br>
-    Instgram :<br>
-    Facebook :<br>
-    Email:<br><br>
-    &copy; Devhari</p><br>
-  </div>
+<div class="footer">
+<p>
+<a  href="details.html">Contact Details</a><br>  &copy; Devhari</p>
+
+</div>
+
 </body>
 </html>
