--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <head>
-  <link rel="stylesheet" href="2.css">
+  <link rel="stylesheet" href="index.css">
 <script src="2.js"></script>
 </head>
 
@@ -25,17 +25,20 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item ">
-        <a class="nav-link" href="2.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="navbar-item ">
         <a class="nav-link" href="Travelogue.html">Travelogue</a>
+      </li>
+      <li class="navbar-item ">
+        <a class="nav-link" href="myedit.html">My Edits</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="details.html">Contact Details</a></li>
           <li><a class="dropdown-item" href="#">Another action</a></li>
           <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Submen wider text</a>
             <ul class="dropdown-menu">
@@ -79,7 +82,7 @@
   </div>
     </div>
     <div class="carousel-item">
-      <img src="img3.jpg" alt="New York" style=" width:100%; height:450px">
+      <img src="img3.jpg" alt="Los Angeles" style=" width:100%; height:450px">
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
@@ -98,18 +101,25 @@
 
 <!--about-->
 <div class="about">
-  <h3> </t> About Me</h3>
-  <p>Lorem ipsum dolor sit amet, dapibus nulla in ut et, mauris volutpat, nunc laboris sed nascetur, netus eu dapibus auctor commodo. Urna non dui et quod voluptatem ac, sit vel, aliquet odio, tellus imperdiet enim condimentum dictumst. Ullamcorper etiam, velit suspendisse vestibulum eu rutrum curabitur. Ad vestibulum, egestas aliquam rutrum rhoncus vestibulum pellentesque. Lorem dis aliquam. Tempus varius, wisi non nulla, pulvinar pede, vel sociis wisi proin sodales, libero eros purus.</p>
-  <p>At ac scelerisque scelerisque erat, placerat lacus suscipit in nam sodales quis, nec vitae, donec id orci per, risus nostrud purus pulvinar morbi orci mauris. Eros mi amet eget, sagittis sapien. Massa eget erat eu aliquam dolor, sollicitudin est aliquam accumsan, in wisi quam dui eu aliquam neque, erat leo, vitae turpis ut. In urna eget aenean mollis eget fringilla, sed ullamcorper cras. Arcu ornare class quam ipsum, metus scelerisque lobortis</p>
+<div class="abtext" >
+ <h3 style="font-weight:bold;">  About Me :</h3>
+
+  <p>I'm Ganesh Babu, Doing Visual communication,student at SLCS college.,</p>
+
+
+  <p>Being an photographer, I used to capture the moments with my cam Canon. I haven't realised my love for photography and Editing until clicking my first picture. Since then Started my photography as passion and Started Editing those pics in Photoshop.To develop my skills, Joined in the college of viscom to learn more and more about my love.
+
+In this page you can find my works that I've taken.</p>
+</div>
+<div class="aimg">
+  <img src="aimg1.jpeg" id="aim">
+</div>
 </div>
 <!--Footer-->
 <div class="footer">
-  <br>
-  <p>Contact :<br>
-  Instgram :<br>
-  Facebook :<br>
-  Email:<br><br>
-  &copy; Devhari</p><br>
+
+<a  href="details.html">Contact Details</a><br>
+<a  href="details.html"> &copy; Devhari</a><br>
 </div>
 
 </body>
