--- a/index.html
+++ b/index.html
@@ -68,27 +68,27 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img1.jpg" alt="Los Angeles" style=" width:100%; height:450px">
+      <img src="img1.jpg" alt="Los Angeles" style=" width:100%; height:400px">
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
   </div>
     </div>
     <div class="carousel-item">
-      <img src="img2.jpg" alt="Chicago" style=" width:100%; height:450px">
+      <img src="img2.jpg" alt="Chicago" style=" width:100%; height:400px">
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
   </div>
     </div>
     <div class="carousel-item">
-      <img src="img3.jpg" alt="Los Angeles" style=" width:100%; height:450px">
+      <img src="img3.jpg" alt="Los Angeles" style=" width:100%; height:400px">
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
   </div>
     </div>
-  </div>
+  </div></div>
 
   <!-- Left and right controls -->
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
