--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img1.jpg" alt="Los Angeles" style=" width:100%; height:400px">
+      <img src="img1.jpg" alt="Los Angeles" >
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
   </div>
     </div>
     <div class="carousel-item">
-      <img src="img2.jpg" alt="Chicago" style=" width:100%; height:400px">
+      <img src="img2.jpg" alt="Chicago" >
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
   </div>
     </div>
     <div class="carousel-item">
-      <img src="img3.jpg" alt="Los Angeles" style=" width:100%; height:400px">
+      <img src="img3.jpg" alt="Los Angeles" >
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
