--- a/details.html
+++ b/details.html
@@ -38,7 +38,7 @@
           Dropdown
         </a>
         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-          <li><a class="dropdown-item" href="details.htmls">Contact Details</a></li>
+          <li><a class="dropdown-item" href="details.html">Contact Details</a></li>
           <li><a class="dropdown-item" href="#">Another action</a></li>
           <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Submen wider text</a>
             <ul class="dropdown-menu">
@@ -56,12 +56,12 @@
   <h1>Contact Details</h1>
   <p></p>
 </div>
-<br><br><br><br><br><br><br>
+
 <div class="insta">
-  
-  <a href="https://instagram.com/pg_creation1?utm_source=ig_profile_share&igshid=1ene4mcg7a76r"><img src="in.png" id="img"></a><br><br>
+
+  <a href="https://instagram.com/pg_creation1?utm_source=ig_profile_share&igshid=1ene4mcg7a76r"><img src="in.png" id="img"></a>
   <a href="https://www.facebook.com/parthiganesh78/?epa=SEARCH_BOX&jazoest=265100119118976811187777982531229010850731151111158310211711572101107488167108117951135088954972517650115858365586510012211656571198712012050455411482111681087087897376711061069511052958070971026611510611681104108100691184881"><img src="fb.png" id="img"></a>
-  <a href="tel:7502208797"><img src="ph1.png" id="img"></a><br><br>
+  <a href="tel:7502208797"><img src="ph1.png" id="img"></a>
 </div>
 
 
