--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
 
   <!-- The slideshow -->
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item active col-md-13">
       <img src="img1.jpg" alt="Los Angeles" >
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
   </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item col-md-13">
       <img src="img2.jpg" alt="Chicago" >
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
   </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item col-md-13">
       <img src="img3.jpg" alt="Los Angeles" >
       <div class="carousel-caption">
     <h3>Kodaikanal</h3>
     <p>We had such a great time in!</p>
   </div>
     </div>
-  </div></div>
+  </div>
 
   <!-- Left and right controls -->
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
