--- a/details.html
+++ b/details.html
@@ -15,7 +15,7 @@
 <script src="2.js"></script>
 </head>
 
-<body style="background-color:#979995;">
+<body >
   <!--navbar-->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <a class="navbar-brand pb-2" href="#">PG CREATION</a>
