--- a/details.html
+++ b/details.html
@@ -15,7 +15,7 @@
 <script src="2.js"></script>
 </head>
 
-<body >
+<body background="img1.jpg">
   <!--navbar-->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <a class="navbar-brand pb-2" href="#">PG CREATION</a>
@@ -54,7 +54,7 @@
 
 <div class="Contact">
   <h1>Contact Details</h1>
-  <p></p>
+
 </div>
 
 <div class="insta">
