--- a/Travelogue.html
+++ b/Travelogue.html
@@ -88,9 +88,9 @@
 
 <!--footer-->
 <div class="footer">
-<p>
-<a  href="details.html">Contact Details</a><br>  &copy; Devhari</p>
 
+<a  href="details.html">Contact Details</a><br>
+<a  href="details.html"> &copy; Devhari</a><br>
 </div>
 
 </body>
