--- a/details.html
+++ b/details.html
@@ -73,9 +73,8 @@
 <!--Footer-->
 <div class="footer">
 
-  &copy; Devhari
 
+<a  href="details.html">  &copy; 2018 Devhari</a><br>
 </div>
-
 </body>
 </html>
