--- a/myedit.html
+++ b/myedit.html
@@ -86,9 +86,9 @@
 
 
 <div class="footer">
-<p>
-<a  href="details.html">Contact Details</a><br>  &copy; Devhari</p>
-
+<a  href="details.html">Contact Details</a><br>
+<a  href="details.html"> &copy; Devhari</a><br>
+</div>
 </div>
 </body>
 </html>
